crates/mabo-kotlin/tests/snapshots/render__render@mixed.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "/// Schema with a bit of everything, to try out more complex scenarios.\n\n/// Basic user information.\n///\n/// Uses various other `structs` and `enums` to compose the information\n/// in a **type safe** way.\nstruct User {\n    name: FullName @1,\n    /// Physical address, might not be specified by the user.\n    address: option<Address> @2,\n    age: u8 @3,\n    birthday: birthday::DayOfBirth @4,\n}\n\n/// Full name of a user.\nstruct FullName {\n    first: string @1,\n    middle: option<string> @2,\n    last: string @3,\n}\n\n/// Simple alias for convenience.\n///\n/// - Might be easier to remember.\n/// - Often referenced as this.\ntype Name = FullName;\n\nstruct Address {\n    /// Street name.\n    street: string @1,\n    /// Number of the house in the street.\n    house_no: HouseNumber @2,\n    city: string @3,\n}\n\n/// The number on the house.\n///\n/// More details can be found at [Wikipedia](https://en.wikipedia.org/wiki/House_numbering).\nenum HouseNumber {\n    /// Digit only number.\n    Digit(u16 @1) @1,\n    /// Mixed _number_ with characters like `1a`.\n    Text(string @1) @2,\n}\n\n/// Probably the max age of a human, currently.\nconst MAX_AGE: u8 = 120;\n\n\n/// Details for defining birthdays.\nmod birthday {\n    /// As the name suggests, specifies details about birthdays.\n    enum DayOfBirth {\n        Specific {\n            year: u16 @1,\n            month: Month @2,\n            day: u8 @3,\n        } @1,\n        /// The user didn't want to say.\n        Secret {\n            /// Optional info from the user about why they didn't want to\n            /// reveal their birthday.\n            reason: option<string> @1,\n        } @2,\n        /// We never asked and nobody knows.\n        Unknown @3,\n    }\n\n    /// Let's assume we only have details of people born **after** this year.\n    const MIN_YEAR: u16 = 1900;\n\n    /// Absolute maximum for a day, but might be even less depending\n    /// on the month.\n    const MAX_DAY: u8 = 31;\n\n    /// The month of the year.\n    enum Month {\n        January @1,\n        February @2,\n        March @3,\n        April @4,\n        May @5,\n        June @6,\n        July @7,\n        August @8,\n        September @9,\n        October @10,\n        November @11,\n        December @12,\n    }\n}"
input_file: crates/mabo-parser/tests/inputs/mixed.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

/**
 * Basic user information.
 * 
 * Uses various other `structs` and `enums` to compose the information
 * in a **type safe** way.
 */
public data class User(
    val name: FullName,
    /**
     * Physical address, might not be specified by the user.
     */
    val address: Address?,
    val age: UByte,
    val birthday: DayOfBirth,
) : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
        Encoder.encodeField(w, 1, { w -> this.Name.encode(w) })
        Encoder.encodeFieldOption(w, 2, this.Address, { w, v -> v.encode(w) })
        Encoder.encodeField(w, 3, { w -> Encoder.encodeU8(w, this.Age) })
        Encoder.encodeField(w, 4, { w -> this.Birthday.encode(w) })
        Encoder.encodeU32(w, END_MARKER)
    }

    override fun size(): Int = 0
        + Sizer.sizeField(1, { this.Name.size() })
        + Sizer.sizeFieldOption(2, this.Address, { v -> v.size() })
        + Sizer.sizeField(3, { Sizer.sizeU8(this.Age) })
        + Sizer.sizeField(4, { this.Birthday.size() })
        + Sizer.sizeFieldId(END_MARKER)

}

/**
 * Full name of a user.
 */
public data class FullName(
    val first: String,
    val middle: String?,
    val last: String,
) : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
        Encoder.encodeField(w, 1, { w -> Encoder.encodeString(w, this.First) })
        Encoder.encodeFieldOption(w, 2, this.Middle, { w, v -> Encoder.encodeString(w, v) })
        Encoder.encodeField(w, 3, { w -> Encoder.encodeString(w, this.Last) })
        Encoder.encodeU32(w, END_MARKER)
    }

    override fun size(): Int = 0
        + Sizer.sizeField(1, { Sizer.sizeString(this.First) })
        + Sizer.sizeFieldOption(2, this.Middle, { v -> Sizer.sizeString(v) })
        + Sizer.sizeField(3, { Sizer.sizeString(this.Last) })
        + Sizer.sizeFieldId(END_MARKER)

}

/**
 * Simple alias for convenience.
 * 
 * - Might be easier to remember.
 * - Often referenced as this.
 */
typealias Name = FullName

public data class Address(
    /**
     * Street name.
     */
    val street: String,
    /**
     * Number of the house in the street.
     */
    val houseNo: HouseNumber,
    val city: String,
) : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
        Encoder.encodeField(w, 1, { w -> Encoder.encodeString(w, this.Street) })
        Encoder.encodeField(w, 2, { w -> this.HouseNo.encode(w) })
        Encoder.encodeField(w, 3, { w -> Encoder.encodeString(w, this.City) })
        Encoder.encodeU32(w, END_MARKER)
    }

    override fun size(): Int = 0
        + Sizer.sizeField(1, { Sizer.sizeString(this.Street) })
        + Sizer.sizeField(2, { this.HouseNo.size() })
        + Sizer.sizeField(3, { Sizer.sizeString(this.City) })
        + Sizer.sizeFieldId(END_MARKER)

}

public sealed interface HouseNumber {
    /**
     * Digit only number.
     */
    public data class Digit(
        val n0: UShort,
    ) : HouseNumber, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(1)
            + Sizer.sizeField(1, { Sizer.sizeU16(this.N0) })
            + Sizer.sizeFieldId(END_MARKER)

    }

    /**
     * Mixed _number_ with characters like `1a`.
     */
    public data class Text(
        val n0: String,
    ) : HouseNumber, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(2)
            + Sizer.sizeField(1, { Sizer.sizeString(this.N0) })
            + Sizer.sizeFieldId(END_MARKER)

    }
}

/**
 * Probably the max age of a human, currently.
 */
const val MAX_AGE: UByte = 120u

--- sample/birthday.kt

/**
 * Details for defining birthdays.
 */
package birthday

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

public sealed interface DayOfBirth {
    public data class Specific(
        val year: UShort,
        val month: Month,
        val day: UByte,
    ) : DayOfBirth, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(1)
            + Sizer.sizeField(1, { Sizer.sizeU16(this.Year) })
            + Sizer.sizeField(2, { this.Month.size() })
            + Sizer.sizeField(3, { Sizer.sizeU8(this.Day) })
            + Sizer.sizeFieldId(END_MARKER)

    }

    /**
     * The user didn't want to say.
     */
    public data class Secret(
        /**
         * Optional info from the user about why they didn't want to
         * reveal their birthday.
         */
        val reason: String?,
    ) : DayOfBirth, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(2)
            + Sizer.sizeFieldOption(1, this.Reason, { v -> Sizer.sizeString(v) })
            + Sizer.sizeFieldId(END_MARKER)

    }

    /**
     * We never asked and nobody knows.
     */
    public object Unknown : DayOfBirth, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(3)

    }
}

/**
 * Let's assume we only have details of people born **after** this year.
 */
const val MIN_YEAR: UShort = 1900u

/**
 * Absolute maximum for a day, but might be even less depending
 * on the month.
 */
const val MAX_DAY: UByte = 31u

public sealed interface Month {
    public object January : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(1)

    }

    public object February : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(2)

    }

    public object March : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(3)

    }

    public object April : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(4)

    }

    public object May : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(5)

    }

    public object June : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(6)

    }

    public object July : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(7)

    }

    public object August : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(8)

    }

    public object September : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(9)

    }

    public object October : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(10)

    }

    public object November : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(11)

    }

    public object December : Month, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(12)

    }
}


