crates/mabo-kotlin/tests/snapshots/render__render@struct_generics.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/mabo-parser/tests/inputs/struct_generics.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

/**
 * Generic key-value pair.
 */
public data class KeyValue<K, V>(
    val key: K,
    val value: V,
) : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
        Encoder.encodeField(w, 1, { w -> this.Key.encode(w) })
        Encoder.encodeField(w, 2, { w -> this.Value.encode(w) })
        Encoder.encodeU32(w, END_MARKER)
    }

    override fun size(): Int = 0
        + Sizer.sizeField(1, { this.Key.size() })
        + Sizer.sizeField(2, { this.Value.size() })
        + Sizer.sizeFieldId(END_MARKER)

}


