crates/mabo-kotlin/tests/snapshots/render__render@struct_min_ws.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "struct Sample<T>{a:u32@1,b:bool@2,c:T@3}"
input_file: crates/mabo-parser/tests/inputs/struct_min_ws.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

public data class Sample<T>(
    val a: UInt,
    val b: Boolean,
    val c: T,
) : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
        Encoder.encodeField(w, 1, { w -> Encoder.encodeU32(w, this.A) })
        Encoder.encodeField(w, 2, { w -> Encoder.encodeBool(w, this.B) })
        Encoder.encodeField(w, 3, { w -> this.C.encode(w) })
        Encoder.encodeU32(w, END_MARKER)
    }

    override fun size(): Int = 0
        + Sizer.sizeField(1, { Sizer.sizeU32(this.A) })
        + Sizer.sizeField(2, { Sizer.sizeBool(this.B) })
        + Sizer.sizeField(3, { this.C.size() })
        + Sizer.sizeFieldId(END_MARKER)

}


